--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,7 +1,9 @@
 .main-header {
   width: 100%;
-  position: fixed;
+  position: absolute;
   z-index: 10;
+  top: 0;
+  left: 0;
 }
 
 .main-header__wrapper {
