--- a/source/sass/blocks/home.scss
+++ b/source/sass/blocks/home.scss
@@ -3,28 +3,30 @@
 
   padding-top: $header-height;
   width: 100%;
-  min-height: 620px;
+  min-height: 500px;
   color: $white;
   overflow: hidden;
   background-color: $bg-dark-purple;
-  background-image: url("../img/tint.png"), url("../img/bg-home.jpg");
+  background-image: url("../img/tint-img.png"), url("../img/bg-home-img.jpg");
   background-size: cover;
   background-position: top;
-  margin-bottom: 95px;
 }
 
 .home__text {
+  @include indent;
+
   &--small {
     @include font-style(32px, 38px, 300);
 
-    margin-top: 11.4%;
+    margin-top: 10.5%;
     margin-bottom: 30px;
   }
 
   &--big {
     @include font-style(66px, 79px, 700);
 
-    margin-bottom: 70px;
+    margin-bottom: 65px;
+    text-transform: uppercase;
   }
 }
 
@@ -34,6 +36,15 @@
 
   display: inline-block;
   border: 3px solid $white;
-  padding: 20px 60px;
+  padding: 15px 64px;
   letter-spacing: 0;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 8px 6px rgba($white, 0.5)
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 }
