--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,5 +1,5 @@
 .services {
-  margin-bottom: 100px;
+  margin-bottom: 95px;
 }
 
 .services__list {
@@ -7,7 +7,7 @@
 }
 
 .services__title {
-  @include font-style(60px, 78px, 700);
+  @include font-style(56px, 76px, 700);
   @include indent;
 
   width: 100%;
@@ -20,9 +20,12 @@
 }
 
 .services__item {
+ padding-top: 85px;
+ padding-bottom: 100px;
 
   &:first-child {
-    padding: 0 2.88%;
+    padding-left: 2.88%;
+    padding-right: 2.88%;
   }
 
   &--bg {
@@ -31,19 +34,25 @@
 }
 
 .services__bg-wrapper {
-  padding: 0 2.88%;
-  padding-top: 95px;
+  padding-left: 2.88%;
+  padding-right: 2.88%;
 }
 
 .services__text {
-  @include font-style(18px, 24px, 400);
+  @include font-style(18px, 25px, 400);
+  @include indent;
+
   width: 100%;
   text-align: left;
   color: $gray;
 }
 
-.services__text-wrapper {
-  padding-bottom: 95px;
+@include respond-to(medium) {
+  .services__title {
+    @include font-style(60px, 78px, 700);
+
+    text-align: left;
+  }
 }
 
 @include respond-to(large) {
@@ -51,7 +60,8 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: top;
+    position: relative;
 
     &--bg {
       display: block;
@@ -62,16 +72,28 @@
     &:first-child .services__text-wrapper {
       width: 65%;
     }
-  }
 
-  .services__text-wrapper {
-    width: 59.6%;
-  }
-
+    &:last-child .services__text-wrapper {
+      width: 62%;
+      margin-left: auto;
+    }
+}
   .services__bg-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
+    position: relative;
+  }
+
+  .services__icon {
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translateY(-50%);
+
+    &--users {
+      left: 4%;
+    }
   }
 }
