--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,5 +11,7 @@
 @import "blocks/home.scss";
 @import "blocks/services.scss";
 @import "blocks/skills.scss";
+@import "blocks/main-footer.scss";
 @import "blocks/contacts.scss";
-@import "blocks/form.scss"
+@import "blocks/form.scss";
+@import "blocks/copyright.scss"
