--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -62,6 +62,7 @@
     justify-content: space-between;
     align-items: top;
     position: relative;
+    z-index: 10;
 
     &--bg {
       display: block;
@@ -84,12 +85,14 @@
     align-items: center;
     box-sizing: border-box;
     position: relative;
+    z-index: 10;
   }
 
   .services__icon {
     position: absolute;
     right: 5%;
     top: 50%;
+    z-index: -2;
     transform: translateY(-50%);
 
     &--users {
